--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+	<style>
+		.parent:hover > * {
+		  opacity: 0.35;
+		}
+
+		.parent:hover > *:hover {
+		  transform: scale(1.1);
+		  opacity: 1;
+		}
+	</style>
+
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -58,11 +69,10 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aurélien Werenne</a></h1>
-				<!-- <span class="position"><a href="#">UI/UX/Designer</a> in Philippines</span> -->
-				<span style="font-size: 20px">
-					<a href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://www.linkedin.com/in/aurelienwerenne/"><i class="icon-linkedin2"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="files/cv.pdf"><i class="icon-file-pdf"></i></a>
+				<span style="font-size: 20px" class="parent">
+					<a target="_blank" href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a target="_blank" href="https://www.linkedin.com/in/aurelienwerenne/"><i class="icon-linkedin2"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a target="_blank" href="files/cv.pdf"><i class="icon-file-pdf" ></i></a>
 				</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar" style="margin-top: 35px">
@@ -71,7 +81,6 @@
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<li><a href="#" data-nav-section="work">Projects</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
-						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -226,44 +235,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								    <span>100%</span>
 								  	</div>
 								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-
-			<section class="colorlib-contact" data-section="contact">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Get in Touch</span>
-							<h2 class="colorlib-heading">Contact</h2>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-7 col-md-push-1">
-							<div class="row">
-								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="">
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name">
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Email">
-										</div>
-										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Subject">
-										</div>
-										<div class="form-group">
-											<textarea name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-										</div>
-										<div class="form-group">
-											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message">
-										</div>
-									</form>
-								</div>
-								
 							</div>
 						</div>
 					</div>
