Favicon. Refine structure projects.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/icon-ai.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -58,6 +58,14 @@
 		  transform: scale(1.1);
 		  opacity: 1;
 		}
+
+		.center-video {
+		    margin-left: auto;
+		    margin-right: auto;
+		    display: block;
+		    margin-top: 20px; 
+		    border: none;
+		}
 	</style>
 
 	</head>
@@ -67,7 +75,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about.jpeg);"></div>
+				<div class="author-img" style="background-image: url(images/profile.jpeg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Aurélien Werenne</a></h1>
 				<span style="font-size: 20px" class="parent">
 					<a target="_blank" href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -103,8 +111,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne</strong> TODO... On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+										<p><strong>Hi I'm Aurélien Werenne</strong> prefer thing in engineering is finding simple creative solutions to complex problems.</p>
+										<p>Interested and hope to see in my work in self-driving cars, unsupervised deep learning and reasoning, underactuated control in robotics, ...</p>
 									</div>
 								</div>
 							</div>
@@ -125,25 +133,30 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div style="margin-bottom: 60px">
 						<div class="row">
 							<div class="col-md-12">
-								<p><b>Master thesis</b></p>
+								<p><b>Mapping of an unknown environment with robots</b></p>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<image width="400px;" src="images/img-1.jpg" align="left" style="padding-top:5px; margin-right:20px"/>
-								The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.
+								The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. 
 							</div>
 						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="center-video"></iframe>
+							</div>
+						</div>
+						
 					</div>
 					<div style="margin-bottom: 60px">
 						<div class="row">
 							<div class="col-md-12">
-								<p><b>Personal Project</b></p>
+								<p><b>Solving failing modes in Multi-Modal Deep Learning</b></p>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<image width="400px;" src="images/img-1.jpg" align="right" style="padding-top:5px; margin-left:20px"/>
+								<image width="400px;" src="images/img-thesis.png" align="left" style="padding-top:5px; margin-right:20px"/>
 								The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.
 							</div>
 						</div>
