Add used technologies & meta-links to project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
 		    margin-top: 20px; 
 		    border: none;
 		}
+
+		.link-project:hover {
+			color: blue;
+			cursor: pointer;
+		}
+
+		.colorlib-heading {
+			font-size: 20px;
+		}
 	</style>
 
 	</head>
@@ -133,12 +142,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div style="margin-bottom: 60px">
 						<div class="row">
 							<div class="col-md-12">
-								<p><b>Mapping of an unknown environment with robots</b></p>
+								<p><b style="font-size:17px;">Mapping of an unknown environment with robots</b></p>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
+								Soldering, Wood, Simulator,...
 								The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. 
+							</div>
+						</div>
+						<div class="row" style="margin-top: 10px">
+							<div class="col-md-12">
+								<b>Languages & Frameworks</b>: C++, Arduino, Python, Pygame, Scipy, Latex
+							</div>
+						</div>
+						<div class="row" style="margin-top: 5px">
+							<div class="col-md-12">
+								<b>Links</b>: [<a class="link-project" href="https://www.youtube.com/embed/tgbNymZ7vqY">Video</a>], [<a class="link-project" href="https://github.com/awerenne/multi-robot-mapping">Code</a>], [<a class="link-project" href="files/pp-report.pdf">Report</a>]
 							</div>
 						</div>
 						<div class="row">
@@ -151,13 +171,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div style="margin-bottom: 60px">
 						<div class="row">
 							<div class="col-md-12">
-								<p><b>Solving failing modes in Multi-Modal Deep Learning</b></p>
+								<p><b style="font-size:17px;">Solving failing modes in Multi-Modal Deep Learning</b></p>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
 								<image width="400px;" src="images/img-thesis.png" align="left" style="padding-top:5px; margin-right:20px"/>
 								The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.
+							</div>
+						</div>
+						<div class="row" style="margin-top: 10px">
+							<div class="col-md-12">
+								<b>Languages & Frameworks</b>: Python, Pytorch, Scipy, Latex
+							</div>
+						</div>
+						<div class="row" style="margin-top: 5px">
+							<div class="col-md-12">
+								<b>Links</b>: [<a class="link-project" href="https://github.com/awerenne/energy-based-multimodal-attention">Code</a>], [<a class="link-project" href="files/thesis-report.pdf">Report</a>]
 							</div>
 						</div>
 					</div>
