--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne</strong> prefer thing in engineering is finding simple creative solutions to complex problems.</p>
-										<p>Interested and hope to see in my work in self-driving cars, unsupervised deep learning and reasoning, underactuated control in robotics, ...</p>
+										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about subjects related to self-driving cars, deep learning, reasoning in AI, robotics and everything mixing math & programming. </p>
+										<p>Below you can find more about the projects I've done and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
 							</div>
