First draft of "Projects" section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about subjects related to self-driving cars, deep learning, reasoning in AI, robotics and everything mixing math & programming. </p>
+										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about subjects related to self-driving cars, deep learning, reasoning in AI, robotics and everything mixing maths & programming. </p>
 										<p>Below you can find more about the projects I've done and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
@@ -142,42 +142,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div style="margin-bottom: 60px">
 						<div class="row">
 							<div class="col-md-12">
-								<p><b style="font-size:17px;">Mapping of an unknown environment with robots</b></p>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								Soldering, Wood, Simulator,...
-								The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. 
-							</div>
-						</div>
-						<div class="row" style="margin-top: 10px">
-							<div class="col-md-12">
-								<b>Languages & Frameworks</b>: C++, Arduino, Python, Pygame, Scipy, Latex
-							</div>
-						</div>
-						<div class="row" style="margin-top: 5px">
-							<div class="col-md-12">
-								<b>Links</b>: [<a class="link-project" href="https://www.youtube.com/embed/tgbNymZ7vqY">Video</a>], [<a class="link-project" href="https://github.com/awerenne/multi-robot-mapping">Code</a>], [<a class="link-project" href="files/pp-report.pdf">Report</a>]
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="center-video"></iframe>
-							</div>
-						</div>
-						
-					</div>
-					<div style="margin-bottom: 60px">
-						<div class="row">
-							<div class="col-md-12">
 								<p><b style="font-size:17px;">Solving failing modes in Multi-Modal Deep Learning</b></p>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
 								<image width="400px;" src="images/img-thesis.png" align="left" style="padding-top:5px; margin-right:20px"/>
-								The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.
+								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The proposed solution in this thesis is to help the neural network find the combination of modes with the least amount of perturbation and at the same time having the highest informativeness for the predictive task. This solution obtained promising results. The figure on the right shows how the performance evolves when increasing the amount of perturbations on one mode: the performance of the neural network using our solution (blue line) remains more stable, whereas the performance using the most common technique (red line) decreases drastically. More information can be found in the report (link below).
 							</div>
 						</div>
 						<div class="row" style="margin-top: 10px">
@@ -190,6 +161,41 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<b>Links</b>: [<a class="link-project" href="https://github.com/awerenne/energy-based-multimodal-attention">Code</a>], [<a class="link-project" href="files/thesis-report.pdf">Report</a>]
 							</div>
 						</div>
+					</div>
+					<div style="margin-bottom: 60px">
+						<div class="row">
+							<div class="col-md-12">
+								<p><b style="font-size:17px;">Mapping unknown environments using robots</b></p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<p>The objective of this project was to construct two robots from scratch, exploring an unknown environment as quickly as possible. In addition, a program was running on my computer during the exploration receiving information messages coming from the robots. Those messages were used to construct a map of the environment in real-time. A demonstration of the result can be seen below.</p>
+
+								<p>I must admit I underestimated the difficulty of making a robot work <b>robustly</b>. Despite the frustion caused by the hundreds of small problems encountered, it was a lot of fun and the learning experience was great.</p>
+							</div>
+						</div>
+						<div class="row" style="margin-top: 10px">
+							<div class="col-md-12">
+								<b>Languages & Frameworks</b>: C++, Arduino, Python, Pygame, Scipy, Latex
+							</div>
+						</div>
+						<div class="row" style="margin-top: 5px">
+							<div class="col-md-12">
+								<b>Links</b>: [<a class="link-project" href="https://www.youtube.com/embed/tgbNymZ7vqY">Video</a>], [<a class="link-project" href="https://github.com/awerenne/multi-robot-mapping">Code</a>], [<a class="link-project" href="files/pp-report.pdf">Report</a>]
+							</div>
+						</div>
+						<div class="row" style="margin-top: 5px">
+							<div class="col-md-12">
+								<b>Extra skills developed</b>: Woodcraft (chassis), Soldering, Patience
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="center-video"></iframe>
+							</div>
+						</div>
+						
 					</div>
 				</div>
 			</section>
