--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about subjects related to self-driving cars, deep learning, reasoning in AI, robotics and everything mixing maths & programming. </p>
-										<p>Below you can find more about the projects I've done and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
+										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, reasoning in AI, robotics and everything mixing maths & programming. </p>
+										<p>Below you can find more about the projects I've finished and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
 							</div>
@@ -147,8 +147,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<image width="400px;" src="images/img-thesis.png" align="left" style="padding-top:5px; margin-right:20px"/>
-								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The proposed solution in this thesis is to help the neural network find the combination of modes with the least amount of perturbation and at the same time having the highest informativeness for the predictive task. This solution obtained promising results. The figure on the right shows how the performance evolves when increasing the amount of perturbations on one mode: the performance of the neural network using our solution (blue line) remains more stable, whereas the performance using the most common technique (red line) decreases drastically. More information can be found in the report (link below).
+								<div class="col-md-6">
+									<image style="max-width: 100%;" src="images/img-thesis.png" />
+								</div>
+								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The proposed solution in this thesis is to enable the neural network focus on the best combination of modes, i.e. the modes containing the least amount of perturbations while having the highest informativeness for the predictive task at hand. Promising results were obtained, as an example, the figure on the left shows the performance evolving when increasing the amount of perturbations on one of the input modes. It can be seen that the performance of the neural network enhanced with our method (blue line) remains stable, whereas the performance using standard data augmentation (most common solution against perturbations, red line) decreases drastically. More information can be found in the report (link below).
 							</div>
 						</div>
 						<div class="row" style="margin-top: 10px">
@@ -170,9 +172,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<p>The objective of this project was to construct two robots from scratch, exploring an unknown environment as quickly as possible. In addition, a program was running on my computer during the exploration receiving information messages coming from the robots. Those messages were used to construct a map of the environment in real-time. A demonstration of the result can be seen below.</p>
+								<p>The objective of this project was to build two robots from scratch, exploring an unknown environment as quickly as possible. They are coupled with a program running on my computer during the exploration phase, receiving information messages coming from the robots. Those messages were then used by the program to construct a map of the environment in real-time. A demonstration of the result can be seen below.</p>
 
-								<p>I must admit I underestimated the difficulty of making a robot work <b>robustly</b>. Despite the frustion caused by the hundreds of small problems encountered, it was a lot of fun and the learning experience was great.</p>
+								<p>I must admit that I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite some moments of frustion caused by hundreds of small problems encountered during the project, it was overall a lot of fun and a great learning experience.</p>
 							</div>
 						</div>
 						<div class="row" style="margin-top: 10px">
@@ -187,7 +189,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row" style="margin-top: 5px">
 							<div class="col-md-12">
-								<b>Extra skills developed</b>: Woodcraft (chassis), Soldering, Patience
+								<b>Miscellaneous skills developed</b>: Woodcraft (chassis), Soldering, Patience
 							</div>
 						</div>
 						<div class="row">
