--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 		  opacity: 1;
 		}
 
-		.center-video {
+		/*.center-video {
 		    margin-left: auto;
 		    margin-right: auto;
 		    display: block;
 		    margin-top: 20px; 
 		    border: none;
-		}
+		}*/
 
 		.video-container {
 			position: relative;
@@ -75,15 +75,13 @@
 			overflow: hidden;
 		}
 
-		/*.video-container iframe,
-		.video-container object,
-		.video-container embed {
+		.video-container iframe {
 			position: absolute;
 			top: 0;
 			left: 0;
 			width: 100%;
 			height: 100%;
-		}*/
+		}
 
 		.link-project:hover {
 			color: blue;
@@ -210,9 +208,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<b>Miscellaneous skills developed</b>: Woodcraft (chassis), Soldering, Patience
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-12 video-container">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="center-video" allowfullscreen></iframe>
+						<div class="row" style="margin-top: 30px; padding-left: 50px; padding-right:50px">
+							<div class="col-md-12">
+								<div class="video-container">
+								<iframe width="560" height="315" frameborder="0" src="https://www.youtube.com/embed/tgbNymZ7vqY" class="center-video" allowfullscreen></iframe>
+								</div>
 							</div>
 						</div>
 						
