--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, reasoning in AI, robotics and everything mixing maths & programming. </p>
+										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally everything mixing maths & programming. </p>
 										<p>Below you can find more about the projects I've finished and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
