--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="images/icon-ai.png">
+	<link rel="shortcut icon" href="images/icon-pacman.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -136,8 +136,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where we are encouraged to find simple creative solutions to complex problems. The set of problems I love to solve is broad. Indeed, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally everything mixing maths & programming. </p>
-										<p>Below you can find more about the projects I've finished and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
+										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! What I'm looking for is a place where creativity is encouraged, and where we have to find simple elegant solutions to complex unsolved problems. The set of problems I love to solve is broad, more specifically, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally everything mixing maths & programming. </p>
+										<p>Below you can find more information about the projects I've finished and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
 							</div>
@@ -166,7 +166,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-6">
 									<image style="max-width: 100%;" src="images/img-thesis.png" />
 								</div>
-								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The proposed solution in this thesis is to enable the neural network focus on the best combination of modes, i.e. the modes containing the least amount of perturbations while having the highest informativeness for the predictive task at hand. Promising results were obtained, as an example, the plot shows the performance evolving when increasing the amount of perturbations on one of the input modes. It can be seen that the performance of the neural network enhanced with our method (blue line) remains stable, whereas the performance using standard data augmentation (most common solution against perturbations, red line) decreases drastically. More information can be found in the report (link below).
+								Typically, a multi-modal neural network exploits information from different channels and in different terms (e.g. images, text, sounds, sensor measures) in the hope that the information carried by each mode is complementary, in order to improve the predictions of the neural network. Nevertheless, in realistic situations, varying levels of perturbations can occur on the data of the modes, which may decrease the quality of the inference process. An additional difficulty is that these perturbations vary between the modes and on a sample-per-sample basis. The proposed solution in this thesis is to enable the neural network to focus on the best combination of modes, i.e. the modes containing the least amount of perturbations while having the highest intrinsic informativeness for the predictive task at hand. Promising results were obtained, as an example, the graph shows the performance evolving when increasing the amount of perturbations on one of the input modes. It can be seen that the performance of the neural network using our method (blue line) remains stable, whereas the performance using standard data augmentation (most common solution against perturbations, red line) decreases drastically. More information can be found in the report (link below).
 							</div>
 						</div>
 						<div class="row" style="margin-top: 10px">
@@ -188,7 +188,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<p>The objective of this project was to build two robots from scratch, exploring an unknown environment as quickly as possible. They are coupled with a program running on my computer during the exploration phase, receiving information messages coming from the robots. Those messages were then used by the program to construct a map of the environment in real-time. A demonstration of the result can be seen below.</p>
+								<p>The objective of this project was to build two robots from scratch, whose goal are to explore unknown environments as quickly as possible. Furthermore, the robots are coupled with a program running on my computer, which receives information messages coming from the robots. Those messages are then used by the program to construct a map of the environment in real-time. A demonstration of the final result can be seen below.</p>
 
 								<p>I must admit that I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite some moments of frustion caused by hundreds of small problems encountered during the project, it was overall a lot of fun and a great learning experience.</p>
 							</div>
