--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! I would like to find a place where creativity is encouraged, and used to find simple elegant solutions to complex unsolved problems. The set of problems I love to solve is broad, more specifically, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally, everything mixing maths & programming. </p>
-										<p>Below you can find descriptions of the projects I've finished and the ones that I'm currently working on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
+										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Engineering, here in Belgium. The next step is to find an interesting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to complex unsolved problems. The set of problems I love to solve is broad, more specifically, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally, everything mixing maths & programming. </p>
+										<p>Below you can find descriptions about some of the projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
 							</div>
@@ -190,7 +190,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="col-md-12">
 								<p>The objective of this project was to build two robots from scratch, whose goal are to explore unknown environments as quickly as possible. Furthermore, the robots are coupled with a program running on my computer, which receives information messages coming from the robots. Those messages are then used by the program to construct a map of the environment in real-time. A demonstration of the final result can be seen below.</p>
 
-								<p>I must admit that I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite some moments of frustion caused by hundreds of small problems encountered during the project, it was overall a lot of fun and a great learning experience.</p>
+								<p>I must admit I underestimated the difficulty of making a robot perform <b>robustly</b>. Despite a few moments of frustion caused by hundreds of small problems encountered during the project, it was mostly a lot of fun and a great learning experience.</p>
 							</div>
 						</div>
 						<div class="row" style="margin-top: 10px">
