--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Science in Engineering, here in Belgium. The next step for me is to find an interesting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to complex unsolved problems. The set of problems I love to solve is broad, more specifically, I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally, everything mixing maths & programming. </p>
-										<p>Below you can find descriptions about some of the projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
+										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Science in Engineering, here in Belgium. The next step for me is to find an interesting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to complex unsolved problems. The set of problems I would love (learn) solving is broad, as I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally, everything mixing maths & programming. </p>
+										<p>Below you can read a description of some of the projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
 							</div>
