Include corrections corentin

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aurélien Werenne</title>
+	<title>Aurelien Werenne</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -91,6 +91,10 @@
 		.colorlib-heading {
 			font-size: 20px;
 		}
+
+		section {
+			padding-bottom: 0em;
+		}
 	</style>
 
 	</head>
@@ -101,7 +105,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile.jpeg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Aurélien Werenne</a></h1>
+				<h1 id="colorlib-logo"><a href="index.html">Aurelien Werenne</a></h1>
 				<span style="font-size: 20px" class="parent">
 					<a target="_blank" href="https://github.com/awerenne"><i class="icon-github"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a target="_blank" href="https://www.linkedin.com/in/aurelienwerenne/"><i class="icon-linkedin2"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -136,8 +140,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurélien Werenne.</strong> I've just finished my Master of Science in Engineering, here in Belgium. The next step for me is to find an exciting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to complex unsolved problems. The set of problems I would love (learn) solving is broad, as I'm absolutely passionate about all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally, everything mixing maths & programming. </p>
-										<p>Below you can read a description of some of the projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
+										<p><strong>Hi I'm Aurelien Werenne.</strong> I recently got my Master of Science (M. Sc.) in Engineering, here in Belgium. The next step for me is to find an exciting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to unsolved complex problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally, everything mixing maths and programming. </p>
+										<p>Further down you will be able to read a description of some projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
 							</div>
@@ -220,7 +224,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-skills" data-section="skills">
+			<section class="colorlib-skills" data-section="skills" style="margin-bottom: 150px;">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
