--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="row" style="margin-top: 30px; padding-left: 50px; padding-right:50px">
 							<div class="col-md-12">
 								<div class="video-container">
-								<iframe width="560" height="315" frameborder="0" src="https://www.youtube.com/watch?v=w8zaz-Xr6bw" class="center-video" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/w8zaz-Xr6bw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="center-video" allowfullscreen></iframe>
 								</div>
 							</div>
 						</div>
