--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row" style="margin-top: 5px">
 							<div class="col-md-12">
-								<b>Links</b>: [<a class="link-project" href="https://www.youtube.com/embed/tgbNymZ7vqY">Video</a>], [<a class="link-project" href="https://github.com/awerenne/multi-robot-mapping">Code</a>], [<a class="link-project" href="files/pp-report.pdf">Report</a>]
+								<b>Links</b>: [<a class="link-project" href="https://www.youtube.com/watch?v=w8zaz-Xr6bw">Video</a>], [<a class="link-project" href="https://github.com/awerenne/multi-robot-mapping">Code</a>], [<a class="link-project" href="files/pp-report.pdf">Report</a>]
 							</div>
 						</div>
 						<div class="row" style="margin-top: 5px">
