--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Aurelien Werenne.</strong> I recently got my Master of Science (M. Sc.) in Engineering, here in Belgium. The next step for me is to find an exciting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to unsolved complex problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to self-driving cars, deep learning, sensor fusion, robotics and more generally, everything mixing maths and programming. </p>
+										<p><strong>Hi I'm Aurelien Werenne.</strong> I recently got my Master of Science (M. Sc.) in Engineering, here in Belgium. The next step for me is to find an exciting internship abroad! Ideally, I'd like to find a place where creativity is encouraged, and used to find simple elegant solutions to unsolved complex problems. The set of problems I'd love (learn) solving is broad, as I particularly enjoy all subjects related to robotics, self-driving cars, deep learning, sensor fusion and more generally, everything mixing maths and programming. </p>
 										<p>Further down you will be able to read a description of some projects I've worked on. Feel free to contact me via <a class="link-project" href="https://www.linkedin.com/in/aurelienwerenne/">my Linkedin profile</a>.</p>
 									</div>
 								</div>
@@ -209,7 +209,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="row" style="margin-top: 5px">
 							<div class="col-md-12">
-								<b>Miscellaneous skills developed</b>: Woodcraft (chassis), Soldering, Patience
+								<b>Miscellaneous skills improved</b>: Woodcraft (chassis), Soldering, Persistence
 							</div>
 						</div>
 						<div class="row" style="margin-top: 30px; padding-left: 50px; padding-right:50px">
